--- a/src/js/components/Timeline/timeline.css
+++ b/src/js/components/Timeline/timeline.css
@@ -15,6 +15,14 @@
     margin: 0 auto;
     height: 90%;
     border: 1px solid black;
+    padding: 10px;
+    overflow-y: scroll;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 15px;
+    align-items: center;
 }
 
 .message-form {
